cmake_minimum_required(VERSION 3.15)
project(cpp_linked_lists)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_linked_lists main.cpp linked_lists.hpp recursive_functions.cpp recursive_functions.hpp linked_lists.cpp binary_search.cpp binary_search.hpp sequential_search.cpp sequential_search.hpp stack.cpp stack.hpp test_functions.hpp selection_sort.cpp selection_sort.h)